# clang-tool-template

./: CMakeLists.txt  LICENSE.md  README.md  my-tool.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: MatchPrinter.h  RewritePrinter.h  my-tool.h
src/: MatchPrinter.cpp  RewritePrinter.cpp  main.cpp  my-tool.cpp
